// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected (floating) 1`] = `
<FAB
  icon={[Function]}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "left": 16,
      "position": "absolute",
      "top": 36,
    }
  }
/>
`;

exports[`renders as expected (not floating) 1`] = `
<IconButton
  icon={[Function]}
  onPress={[Function]}
  style={
    Object {
      "marginLeft": 22,
    }
  }
/>
`;
